--- a/TP_Tips.ipynb
+++ b/TP_Tips.ipynb
@@ -3560,8 +3560,8 @@
     "\n",
     "# Sous-graphique 2 : Proportion de chaque montant total arrondi\n",
     "round_number_proportions.plot(kind='bar', color='skyblue', ax=ax2)\n",
-    "ax2.set_title('Proportion of Each Rounded Total Bill + Tip')\n",
-    "ax2.set_ylabel('Proportion')\n",
+    "ax2.set_title('Proportion of Each Rounded Total Bill + Tip:')\n",
+    "ax2.set_ylabel('Proportion:')\n",
     "ax2.grid(axis='y', linestyle='--', alpha=0.7)\n",
     "\n",
     "# Afficher les graphiques\n",
